# Shuma-Gorath

./: .env.full.example  .gitignore  AGENTS.md  AUDIT_TODO.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICK_REFERENCE.md  README.md  TESTING.md  package.json  playwright.config.mjs  pnpm-lock.yaml  run_integration_tests_now.sh  setup.sh  spin.toml  test_spin_colored.sh  test_spin_http.sh  todo.md
.github/: pull_request_template.md
.spin/: sqlite_key_value.db
config/: defaults.env  managed_ip_ranges.json
dashboard/: README.md  admin.js  bootstrap-lit.js  dashboard.js  index.html  login.html  login.js  style.css  svelte.config.js  vite.config.js
docs/: akamai-bot-manager.md  api.md  bot-defence.md  challenge-verification.md  configuration.md  dashboard.md  deployment.md  features.md  index.md  ip-range-policy-runbook.md  maze.md  module-boundaries.md  monitoring-prometheus-parity-audit.md  observability.md  project-principles.md  quick-reference.md  security-hardening.md  testing.md
e2e/: dashboard.modules.unit.test.js  dashboard.smoke.spec.js  seed-dashboard-data.js
research/: claude-review.md  gemini-review.md  lessons-from-cloudflare.md  tarpit-research-2026-02-11.md
scripts/: README.md  config_seed.sh  dev_watch_lock.sh
src/: admin.rs  auth.rs  ban.rs  ban_tests.rs  block_page.rs  browser.rs  cdp.rs  cdp_tests.rs  challenge.rs  challenge_tests.rs  config.rs  config_tests.rs  geo.rs  geo_tests.rs  honeypot.rs  input_validation.rs  ip.rs  js.rs  lib.rs  log_tests.rs  maze.rs  metrics.rs  pow.rs  providers.rs  rate.rs  request_validation.rs  risk_tests.rs  (+7 more)
(+198 files in other folders)
