[package]
name = "shuma_gorath"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Shuma-Gorath: Many-Angled Bot Defence for Fermyon Spin."

[lib]
crate-type = ["rlib"]

[dependencies]
spin-sdk = "2.2.0"
serde_json = "1.0"
hmac = "0.12"
base64 = "0.22"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
percent-encoding = "2.3.2"
ipnet = "2.11.0"